# mempal

./: CLAUDE.md  Cargo.toml  README.md  README_zh.md
.claude/: settings.json
.github/workflows/: pages.yml
crates/mempal-api/: Cargo.toml
crates/mempal-api/src/: handlers.rs  lib.rs  state.rs
crates/mempal-api/tests/: api_test.rs
crates/mempal-cli/: Cargo.toml
crates/mempal-cli/src/: main.rs
crates/mempal-cli/tests/: cli_test.rs
crates/mempal-core/: Cargo.toml
crates/mempal-core/src/: db.rs  lib.rs  protocol.rs  types.rs
crates/mempal-core/tests/: db_test.rs  types_test.rs
crates/mempal-mcp/src/: server.rs  tools.rs
crates/mempal-mcp/tests/: mcp_test.rs
crates/mempal-search/src/: filter.rs  lib.rs  route.rs
crates/mempal-search/tests/: route_test.rs  search_test.rs
docs/: usage.md
docs/plans/: 2026-04-08-p0-implementation.md  2026-04-09-p1-p4-implementation.md
docs/site/: index.html
docs/site/en/: index.html
docs/site/ja/: index.html
specs/: p8-cowork-inbox-push.spec.md
src/: lib.rs  longmemeval.rs  main.rs
src/aaak/: codec.rs  mod.rs  model.rs  parse.rs  spec.rs
src/api/: handlers.rs  mod.rs  state.rs
src/core/: db.rs  mod.rs  protocol.rs  types.rs  utils.rs
src/cowork/: claude.rs  codex.rs  inbox.rs  mod.rs  peek.rs
src/embed/: api.rs  factory.rs  model2vec.rs  onnx.rs
src/ingest/: chunk.rs  detect.rs  mod.rs  normalize.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/search/: mod.rs  rerank.rs  route.rs
tests/: cowork_inbox.rs  cowork_peek.rs
