[package]
name = "mempal-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
